no longer need scripts/init_env.sh; fix gradle with jdk24 warnings